--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,17 +4,13 @@
     "es2021": true,
     "node": true
   },
-  "extends": [
-    "airbnb-base"
-  ],
+  "extends": ["airbnb-base"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": [
-    "@typescript-eslint"
-  ],
+  "plugins": ["@typescript-eslint"],
   "rules": {
     "import/prefer-default-export": "off",
     "import/extensions": [
@@ -28,28 +24,15 @@
       }
     ]
   },
-  "ignorePatterns": [
-    "dist/*"
-  ],
+  "ignorePatterns": ["dist/*"],
   "settings": {
-    "import/extensions": [
-      ".js",
-      ".ts",
-      ".d.ts"
-    ],
+    "import/extensions": [".js", ".ts", ".d.ts"],
     "import/parsers": {
-      "@typescript-eslint/parser": [
-        ".ts",
-        ".d.ts"
-      ]
+      "@typescript-eslint/parser": [".ts", ".d.ts"]
     },
     "import/resolver": {
       "node": {
-        "extensions": [
-          ".js",
-          ".ts",
-          ".d.ts"
-        ]
+        "extensions": [".js", ".ts", ".d.ts"]
       }
     }
   }
